@@ -65,6 +65,7 @@
     <Compile Include="Interop\FreeBSD\Interop.FreeBSD.uname.cs" />
     <Compile Include="Interop\FreeBSD\Interop.FreeBSD.stat.cs" />
     <Compile Include="Interop\FreeBSD\Interop.FreeBSD.types.cs" />
+    <Compile Include="Interop\FreeBSD\Interop.FreeBSD.statfs.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
